[package]
name = "bdk_sqlite"
version = "0.4.3"
authors = ["Bitcoin Dev Kit Developers"]
rust-version = "1.85.0"
edition = "2024"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk-sqlite"
documentation = "https://docs.rs/bdk_sqlite"
description = "SQLite store for BDK using sqlx"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bdk_chain = { version = "0.23.2", features = ["miniscript"] }
bdk_wallet = { version = "2.3.0", optional = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
anyhow = "1"
bdk_esplora = { version = "0.22.1", features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["full"] }

[dev-dependencies.bdk_sqlite]
path = "."
features = ["wallet"]

[features]
default = ["wallet"]
wallet = ["dep:bdk_wallet"]


[[example]]
name = "wallet"
